added project.json and remove config.rb

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,10 @@
     <body>
 
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <p>Hello world!</p>
 
         <!-- build:js /assets/js/site.min.js -->
         <script src="/assets/js/vendor/jquery.1.9.1.min.js"></script>
-        <script src="/assets/js/utils.js"></script>
-        <script src="/assets/js/plugins.js"></script>
         <script src="/assets/js/main.js"></script>
         <!-- endbuild -->
 
